# Classification-and-Summary

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
datasets/: exemplos_chamados.csv  exemplos_chamados_longos.csv
src/: llm.py
src/llm/: __init__.py  base.py  classification.py  summarization.py
src/utils/: __init__.py  csv_tools.py
